--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="style.css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>CV de Logan</title>
     </head>
 
@@ -12,7 +13,13 @@
                 <div class="photo_cv">
                     <img src="Photo_CV_2.jpg" alt="Photo_de_Logan" />
                 </div>
-            
+
+                <div class="identite">
+                    <h1><span>Logan</span> Nochez</h1>
+                    <div class="statut">
+                        <p><span>Dévelo</span>ppeur Front-End en formation</p>
+                    </div>
+                </div>
                 <section class="a_propos_de_moi">
                     <h2>À propos de moi</h2>
                     <div class="aside_container">
@@ -54,13 +61,15 @@
             <section class="contenu">
                 <div class="identite">
                     <h1><span>Logan</span> Nochez</h1>
-                    <p><span>Dévelo</span>ppeur Front-End en recherche d'alternance sur 24 mois - 4 jours en entreprise/1 jour en formation</p>
+                    <div class="statut">
+                        <p><span>Dévelo</span>ppeur Front-End en formation</p>
+                    </div>
                 </div>
                 <section class="diplomes_et_formations">
                     <h2><img src="icone-1.png" alt="" />Diplômes et formations</h2>
                     <p><strong>Développeur Front-End - Bac +3/4 - diplôme enregistré au RNCP</strong><br />
-                        OpenClassrooms Rennes, France Depuis novembre 2020<br />
-                        Projets :<br />
+                        OpenClassrooms, depuis Février 2021<br />
+                        Projets :<br /></p>
                         <ul>
                             <li><strong>Analyser les besoins</strong> à partir du cahier des charges défini par le client ou le chef de projet</li>
                             <li>Implémenter des <strong>mockups</strong> avec du code de qualité</li>
@@ -70,10 +79,10 @@
                             <li>Utiliser des <strong>frameworks comme React</strong> pour construire des applications puissantes et modulaires</li>
                             <li><strong>Tester</strong> le bon fonctionnement de l’application et corriger le code quand c’est nécessaire</li>
                             <li>Assurer le <strong>support technique</strong> du site et produire une <strong>documentation</strong> technique et fonctionnelle du site pour le client</li>
-                        </ul></p>
+                        </ul>
 
                     <p><strong>Prép'Web</strong><br />
-                        OpenClassrooms St Malo, France De décembre 2019 à juin 2020<br />
+                        OpenClassrooms St Malo, France De décembre 2019 à juin 2020<br /></p>
                         <ul>
                         <li>Définir la structure d'une page web à partir d'une maquette</li>
                         <li>Adapter l'affichage d'un site web à des écrans de petite taille</li>
@@ -82,7 +91,7 @@
                         <li>Optimiser le référencement d'un site web</li>
                         <li>Écrire un code HTML et CSS propre</li>
                         <li>Assurer l'accessibilité d'un site web</li>
-                    </ul></p>
+                    </ul>
 
                     <p><strong>Baccalauréat technologique STI2D</strong><br />
                         Lycée Maupertuis Saint-Malo, France De septembre 2018 à juillet 2019</p>
