Lien email et Linkedin

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                     <div class="aside_container">
                         <p>Étudiant en Développement Front-End, déterminé, motivé et curieux, je suis toujours prêt à acquérir de nouvelles compétences.</p>
                         <p>19 ans<br />
-                            logannochez@hotmail.fr<br />
-                            0674550657<br />
+                            <a href="logannochez@hotmail.fr">Mon adresse e-mail</a><br />
+                            06.74.55.06.57<br />
                             Saint-Malo<br />
-                            www.linkedin.com/in/loganncz</p>
+                            <a href="https://www.linkedin.com/in/logan-ncz">Mon Linkedin</a></p>
                     </div>
                 </section>
 
